<resources>
    <string name="app_name">Sistem Absensi PT. Kinest Kreatif Ideata</string>
    <string name="result_text_default">Please focus camera to QR Code</string>
    <string name="title">Sistem Absensi</string>
    <string name="kinest">KINEST</string>
    <string name="kreatif">KREATIF</string>
    <string name="ideata">IDEATA</string>
    <string name="scanner">Scanner</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="info">"Hubungi Kami
Butuh bantuan atau punya pertanyaan? Silahkan hubungi kami melalui
Email : info@kakatu.id
Whatsapp : 0812 4997 1300
Telepon Kantor : (022) 82000 457
Alamat Kantor : Jl. Sukasari 1 No. 04, Sukawarna, Sukajadi, Kota Bandung, Jawa Barat 40164 Indonesia
Waktu Operasional : Senin - Jum’at, Pukul 09.00-17.00 WIB"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_hadir">Sudah Absen</string>
    <string name="nav_belum_hadir">Belum Absen</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="jam_masuk">Jam Masuk</string>
</resources>
