<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    tools:context=".TampilanAwalActivity"
    tools:layout_editor_absoluteY="25dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sistemabsensi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/title"
            android:textColor="@color/yellow"
            android:textSize="36sp" />

        <RelativeLayout
            android:id="@+id/centerlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sistemabsensi"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/kinest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/kinest"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/kreatif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/kinest"
                android:text="@string/kreatif"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ideata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/kreatif"
                android:layout_marginLeft="12dp"
                android:text="@string/ideata"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_toRightOf="@id/kinest"
                android:background="@drawable/logo_kinest" />

            <Button
                android:id="@+id/btn_scanner"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:background="@drawable/bg_button_rounded_red"
                android:text="@string/scanner"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_setting"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@id/btn_scanner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_rounded_yellow"
                android:text="@string/pengaturan"
                android:textColor="@color/white"
                android:textSize="24sp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="25dp"
            android:layout_below="@id/centerlayout"
            android:textSize="4pt"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>